--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     ports:
       - 3333:3333
     #command: yarn sequelize db:migrate
-    command: ["./wait-for-it/wait-for-it.sh", "postgres-compose:5432", "--", "yarn", "sequelize", "db:migrate"]
-    command: ["yarn", "dev"]
+    command: ["./wait-for-it/wait-for-it.sh", "postgres-compose:5432", "--", "yarn", "sequelize", "db:migrate", "yarn", "dev"]
+    #command: ["yarn", "dev"]
     links:
       - postgres-compose
     depends_on:
