--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     ports:
       - 3333:3333
     #command: yarn sequelize db:migrate
-    command: ["./wait-for-it/wait-for-it.sh", "postgres-compose:5432", "--", "yarn", "sequelize", "db:migrate", "yarn", "dev"]
+    command: >
+        bash -c "./wait-for-it/wait-for-it.sh postgres-compose:5432 -- yarn sequelize db:migrate
+        && yarn start"
     #command: ["yarn", "dev"]
     links:
       - postgres-compose
