--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3"
 services:
-  base_project:
-    image: muriloblancoflor/base_project:latest
-    ports:
-      - 3333:3333
-    #command: yarn sequelize db:migrate
-    command: >
-        bash -c "./wait-for-it/wait-for-it.sh postgres-compose:5432 -- yarn sequelize db:migrate
-        && yarn dev"
-    #command: ["yarn", "dev"]
-    links:
-      - postgres-compose
-    depends_on:
-      - postgres-compose
+#  base_project:
+#    image: muriloblancoflor/base_project:latest
+#    ports:
+#      - 3333:3333
+#    #command: yarn sequelize db:migrate
+#    command: >
+#        bash -c "./wait-for-it/wait-for-it.sh postgres-compose:5432 -- yarn sequelize db:migrate
+#        && yarn dev"
+#    #command: ["yarn", "dev"]
+#    links:
+#      - postgres-compose
+#    depends_on:
+#      - postgres-compose
 
   front:
     image: muriloblancoflor/mevizyafront:latest
@@ -23,10 +23,6 @@ services:
     #    bash -c "./wait-for-it/wait-for-it.sh postgres-compose:5432 -- yarn sequelize db:migrate
     #    && yarn dev"
     #command: ["yarn", "dev"]
-    links:
-      - base_project
-    depends_on:
-      - base_project
     stdin_open: true
     tty: true
 
